Chart activity added (source code used mostly from AChartEngine Demo)

--- a/res/layout/session_summary.xml
+++ b/res/layout/session_summary.xml
@@ -6,4 +6,5 @@
     android:id ="@+id/session_summary_host"
     >
     <ListView android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/sessionlist"></ListView>
+    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/session_chartview"></LinearLayout>
 </LinearLayout>
