--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -26,8 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="endSession"
-            android:text="@string/endsession" >
-</Button>
+            android:text="@string/endsession" />
 
     </LinearLayout>
 </LinearLayout>
