--- a/res/layout/start.xml
+++ b/res/layout/start.xml
@@ -3,7 +3,8 @@
     android:id="@+id/start_llayout_host"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="@drawable/background_480_800_test3">
 
     <LinearLayout
         android:layout_width="fill_parent"
