--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:id="@+id/main_llayout_host"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:id ="@+id/main_llayout_host"
     android:background="@drawable/app_bg"
-    >
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/textView1"
@@ -14,7 +13,7 @@
         android:gravity="center_vertical|center_horizontal"
         android:text="TextView"
         android:textSize="45sp" >
-</TextView>
+    </TextView>
 
     <Chronometer
         android:id="@+id/chronometer1"
@@ -23,7 +22,7 @@
         android:gravity="center_vertical|center_horizontal"
         android:text="Chronometer"
         android:textSize="26sp" >
-</Chronometer>
+    </Chronometer>
 
     <TextView
         android:id="@+id/pleaseClickTextView"
@@ -36,13 +35,12 @@
         android:textColor="@android:color/darker_gray"
         android:textSize="24sp" />
 
-    <RelativeLayout android:id="@+id/linearLayout1" 
-        android:layout_height="fill_parent" 
-        android:gravity="bottom" 
+    <RelativeLayout
+        android:id="@+id/linearLayout1"
         android:layout_width="fill_parent"
-        
-        android:scaleType="centerCrop"
-        >
+        android:layout_height="fill_parent"
+        android:gravity="bottom"
+        android:scaleType="centerCrop" >
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -68,6 +66,6 @@
                 android:layout_alignParentRight="true"
                 android:text="@string/pause" />
         </RelativeLayout>
-
     </RelativeLayout>
+
 </LinearLayout>
