--- a/res/layout/activity_runningsession.xml
+++ b/res/layout/activity_runningsession.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/app_bg" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/tv_runningsession_name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -19,7 +19,7 @@
         android:id="@+id/chronometer1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
+        android:layout_below="@+id/tv_runningsession_name"
         android:gravity="center_vertical|center_horizontal"
         android:text="Chronometer"
         android:textSize="26sp" >
