--- a/res/layout/activity_startsession.xml
+++ b/res/layout/activity_startsession.xml
@@ -93,6 +93,8 @@
                 android:layout_marginLeft="10dp"
                 android:ems="10"
                 android:inputType="number"
+                android:maxLength="3"
+                android:digits="0123456789"
                 android:text="@string/defaulttimeout" />
 
             <TextView
