--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="maingreen">#345851</color>
     <color name="darkgreen">#26403B</color>
+    <color name="halfTransparent">#9026403B</color>
 </resources>
