Button style added

--- a/res/layout/activity_share.xml
+++ b/res/layout/activity_share.xml
@@ -35,6 +35,7 @@
 
     <Button
         android:id="@+id/btn_share_share"
+        style="@style/greenbutton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
