--- a/res/layout/activity_runningsession.xml
+++ b/res/layout/activity_runningsession.xml
@@ -46,6 +46,7 @@
         android:padding="15dp" >
 
         <Button
+            style="@style/greenbutton"
             android:id="@+id/btn_runningsession_endsession"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -54,6 +55,7 @@
             android:text="@string/endsession" />
 
         <Button
+            style="@style/greenbutton"
             android:id="@+id/btn_runningsession_pause"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
