--- a/res/layout/activity_startsession.xml
+++ b/res/layout/activity_startsession.xml
@@ -27,17 +27,20 @@
 
         <EditText
             android:id="@+id/et_startsession_newusername"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="5"
             android:ems="10"
             android:inputType="textPersonName" />
 
         <Button
             android:id="@+id/btn_startsession_adduser"
-            android:layout_width="wrap_content"
+            style="@style/greenbutton"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="3"
             android:text="@string/adduser" />
     </LinearLayout>
 
@@ -91,19 +94,19 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:digits="0123456789"
                 android:ems="10"
                 android:inputType="number"
                 android:maxLength="3"
-                android:digits="0123456789"
                 android:text="@string/defaulttimeout" />
 
             <TextView
                 android:id="@+id/tv_startsession_timeout_seconds"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12sp"
                 android:layout_marginRight="12sp"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:text="@string/seconds" />
         </LinearLayout>
     </RelativeLayout>
@@ -122,6 +125,7 @@
 
     <Button
         android:id="@+id/btn_startsession_start"
+        style="@style/greenbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
