--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,10 +4,12 @@
 
     <style name="greenbutton" parent="@android:style/Widget.Button">
         <item name="android:background">@drawable/green_button</item>
-        <item name="android:textSize">25sp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:textAppearance">@android:style/TextAppearance.Medium</item>
         <item name="android:layout_marginLeft">10dip</item>
         <item name="android:layout_marginRight">10dip</item>
+        <item name="android:paddingTop">10dip</item>
+        <item name="android:paddingBottom">10dip</item>
         <item name="android:textColor">@color/buttonTextColor</item>
     </style>
 
