--- a/res/layout/session_chart.xml
+++ b/res/layout/session_chart.xml
@@ -13,7 +13,7 @@
             android:id="@+id/imageView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icon" />
+            android:src="@drawable/icon_new" />
 
         <TextView
             android:id="@+id/tv_chart_appname"
